updated template -- not ready yet

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -16,6 +16,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## global switches "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use test data (not all data is used for fitting/training)\n",
+    "use_testdata = False\n",
+    "\n",
+    "# create plots of the data\n",
+    "show_data = False\n",
+    "\n",
+    "# netCDF output file (set to None to not save output)\n",
+    "savename_output = None\n",
+    "\n",
+    "# save the full Stan output instead a few stats (only active if filename is specified above)\n",
+    "save_full = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## load data from files and plot"
    ]
   },
@@ -30,9 +56,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import dateutil.parser\n",
-    "\n",
-    "# create plots of the data\n",
-    "show_data = False\n",
     "\n",
     "# load data\n",
     "datafiles = {\n",
@@ -199,13 +222,15 @@
     "\n",
     "    data[dataname]['nt_obs'] = data[dataname]['t_obs'].size\n",
     "    \n",
-    "    # set all indices to zero\n",
-    "    data[dataname]['i_test'] = np.zeros(data[dataname]['nt_obs'], dtype=int)\n",
-    "    # load cross-validation testing indices and add them to data\n",
-    "    #data[dataname]['i_test'] = np.loadtxt(itestfiles[dataname]).astype(int)\n",
-    "    ## remove last index, so that dimensions agree\n",
-    "    #data[dataname]['i_test'] = data[dataname]['i_test'][:-1]\n",
-    "    \n",
+    "    if use_testdata:\n",
+    "        # load cross-validation testing indices and add them to data\n",
+    "        data[dataname]['i_test'] = np.loadtxt(itestfiles[dataname]).astype(int)\n",
+    "        # remove last index, so that dimensions agree\n",
+    "        data[dataname]['i_test'] = data[dataname]['i_test'][:-1]\n",
+    "    else:\n",
+    "        # set all indices to zero\n",
+    "        data[dataname]['i_test'] = np.zeros(data[dataname]['nt_obs'], dtype=int)\n",
+    "        \n",
     "    # switch on or off data fitting\n",
     "    data[dataname]['prior_only'] = 0\n",
     "    \n",
@@ -853,48 +878,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''\n",
-    "import netCDF4 as nc4\n",
+    "if savename_output is not None:    \n",
+    "    with nc4.Dataset(savename_output, 'w') as nc:\n",
     "\n",
-    "for dataname in data:\n",
+    "        for dataname in data:\n",
+    "            ncg = nc.createGroup(dataname)\n",
     "\n",
-    "    ncname = 'data_exp_zs_20200624_gallery2_test_{}.nc'.format(dataname)\n",
-    "\n",
-    "    with nc4.Dataset(ncname, 'w') as nc:\n",
-    "        for i,model in enumerate(mcmcs):\n",
-    "            if i == 0:\n",
-    "                nc.createDimension('model', len(mcmcs))\n",
-    "                nc.createDimension('sample', mcmcs[model][dataname]['divrate'].shape[0])\n",
-    "            \n",
-    "                nc.createVariable('divrate', float, ('model','sample'))\n",
-    "                nc.createVariable('sumsqdiff', float, ('model','sample'))\n",
-    "                nc.variables['sumsqdiff'].setncattr('long_name', 'sum of squared column differences')\n",
+    "            if save_full:\n",
+    "                raise NotImplementedError('Saving is not fully working yet -- I am working on it.')\n",
     "                \n",
-    "            nc.variables['divrate'][i,:] = mcmcs[model][dataname]['divrate']\n",
-    "            \n",
-    "            obs = data[dataname]['obs']\n",
-    "\n",
-    "            tmp = mcmcs[model][dataname]['mod_obspos']\n",
-    "            tmp/= np.sum(tmp, axis=1)[:,None,:]\n",
-    "            tmp -= obs[None,:,:]\n",
-    "            tmp **= 2\n",
-    "            \n",
-    "            if np.all(data[dataname]['i_test'] == 0):\n",
-    "                nc.variables['sumsqdiff'][i,:] = np.mean(np.sum(tmp, axis=1), axis=1)\n",
-    "                if i == 0:\n",
-    "                    nc.variables['sumsqdiff'].setncattr('data_used', 'all data')\n",
+    "                for i,model in enumerate(mcmcs):\n",
+    "                    \n",
+    "                    if i == 0:\n",
+    "                        ncg.createDimension('model', len(mcmcs))\n",
+    "                        ncg.createDimension('sample', mcmcs[model][dataname]['divrate'].shape[0])\n",
+    "                        \n",
+    "                    for v in mcmcs[model][dataname].flatnames:\n",
+    "                        if mcmcs[model][dataname][v].ndim == 1:\n",
+    "                            if i == 0:\n",
+    "                                ncg.createVariable(v, float, ('model','sample'))\n",
+    "                            ncg.variables[v][i,:] = mcmcs[model][dataname][v]                        \n",
+    "                \n",
+    "                # TODO implement\n",
     "            else:\n",
-    "                nc.variables['sumsqdiff'][i,:] = np.mean(np.sum(tmp[:,:,data[dataname]['i_test'] == 1], axis=1), axis=1)\n",
-    "                if i == 0:\n",
-    "                    nc.variables['sumsqdiff'].setncattr('data_used', 'testing data')\n",
-    "            \n",
-    "            for iv,v in enumerate(('gamma_max','rho_max','xi','xir','E_star')):\n",
-    "                if i == 0:\n",
-    "                    nc.createVariable(v, float, ('model','sample'))\n",
-    "                if v in mcmcs[model][dataname].flatnames:\n",
-    "                    nc.variables[v][i,:] = mcmcs[model][dataname][v]\n",
-    "'''\n",
-    "None"
+    "                for i,model in enumerate(mcmcs):\n",
+    "                    if i == 0:\n",
+    "                        ncg.createDimension('model', len(mcmcs))\n",
+    "                        ncg.createDimension('sample', mcmcs[model][dataname]['divrate'].shape[0])\n",
+    "\n",
+    "                        ncg.createVariable('divrate', float, ('model','sample'))\n",
+    "                        ncg.createVariable('sumsqdiff', float, ('model','sample'))\n",
+    "                        ncg.variables['sumsqdiff'].setncattr('long_name', 'sum of squared column differences')\n",
+    "\n",
+    "                    ncg.variables['divrate'][i,:] = mcmcs[model][dataname]['divrate']\n",
+    "\n",
+    "                    obs = data[dataname]['obs']\n",
+    "\n",
+    "                    tmp = mcmcs[model][dataname]['mod_obspos']\n",
+    "                    tmp/= np.sum(tmp, axis=1)[:,None,:]\n",
+    "                    tmp -= obs[None,:,:]\n",
+    "                    tmp **= 2\n",
+    "\n",
+    "                    if np.all(data[dataname]['i_test'] == 0):\n",
+    "                        ncg.variables['sumsqdiff'][i,:] = np.mean(np.sum(tmp, axis=1), axis=1)\n",
+    "                        if i == 0:\n",
+    "                            ncg.variables['sumsqdiff'].setncattr('data_used', 'all data')\n",
+    "                    else:\n",
+    "                        nc.variables['sumsqdiff'][i,:] = np.mean(np.sum(tmp[:,:,data[dataname]['i_test'] == 1], axis=1), axis=1)\n",
+    "                        if i == 0:\n",
+    "                            ncg.variables['sumsqdiff'].setncattr('data_used', 'testing data')\n",
+    "\n",
+    "                    for iv,v in enumerate(('gamma_max','rho_max','xi','xir','E_star')):\n",
+    "                        if i == 0:\n",
+    "                            ncg.createVariable(v, float, ('model','sample'))\n",
+    "                        if v in mcmcs[model][dataname].flatnames:\n",
+    "                            ncg.variables[v][i,:] = mcmcs[model][dataname][v]"
    ]
   },
   {
