--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## global switches "
+    "## global switches and settings"
    ]
   },
   {
@@ -34,8 +34,12 @@
     "# netCDF output file (set to None to not save output)\n",
     "savename_output = None\n",
     "\n",
-    "# save the full Stan output instead a few stats (only active if filename is specified above)\n",
-    "save_full = True"
+    "# save the Stan output instead a few stats (only active if filename is specified above)\n",
+    "save_stan_output = True\n",
+    "\n",
+    "# specify the Stan variable names to save; if set to None, all variables are saved \n",
+    "# (only active if save_stan_output is True)\n",
+    "varnames_save = None"
    ]
   },
   {
@@ -346,26 +350,26 @@
     "    'm8':'c8',\n",
     "    'm9':'c9',\n",
     "    'm10':'c10',\n",
-    "    'm11':'c56',\n",
-    "    'm12':'c57',\n",
-    "    'm13':'c58',\n",
-    "    'm14':'c59',\n",
+    "    'm11':'c11',\n",
+    "    'm12':'c12',\n",
+    "    'm13':'c13',\n",
+    "    'm14':'c14',\n",
     "}\n",
     "stan_files = {\n",
-    "    'c1':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_freedelta_normparam_trackgrowth_xval2.stan',\n",
-    "    'c2':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_normparam_trackgrowth_xval2.stan',\n",
-    "    'c3':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_gammaiv6_normparam_trackgrowth_xval2.stan',\n",
-    "    'c4':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respv1_normparam_trackgrowth_xval2.stan',\n",
-    "    'c5':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respv2_normparam_trackgrowth_xval2.stan',\n",
-    "    'c6':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respiv6_normparam_trackgrowth_xval2.stan',\n",
-    "    'c7':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respiv7_normparam_trackgrowth_xval2.stan',\n",
-    "    'c8':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respiv6_normparam_trackgrowth_xval2.stan',\n",
-    "    'c9':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respiv7_normparam_trackgrowth_xval2.stan',\n",
-    "    'c10':'stancode_gallery2/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respv2_normparam_trackgrowth_xval2.stan',\n",
-    "    'c56':'stancode/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv6_normparam_trackgrowth_xval2.stan',\n",
-    "    'c57':'stancode/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv7_normparam_trackgrowth_xval2.stan',\n",
-    "    'c58':'stancode/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv6_normparam_trackgrowth_xval2.stan',\n",
-    "    'c59':'stancode/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv7_normparam_trackgrowth_xval2.stan',\n",
+    "    'c1':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_freedelta_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c2':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c3':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2_gammaiv6_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c4':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respv1_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c5':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respv2_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c6':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respiv6_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c7':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2_respiv7_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c8':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respiv6_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c9':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respiv7_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c10':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_respv2_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c11':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv6_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c12':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2_resp_gammaiv7_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c13':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv6_normparam_trackgrowthvol_xval2.stan',\n",
+    "    'c14':'stancode_gallery2/trackvol_version/matrixmodel_mlmultinom_estinilnorm2_monodelta2-lightsig_resp_gammaiv7_normparam_trackgrowthvol_xval2.stan',\n",
     "}\n",
     "\n",
     "refit_required = {}\n",
@@ -458,7 +462,7 @@
     "                break\n",
     "            print('{}: in try {}/3 found Rhat={:.3f}, trying again'.format(model,itry+1,rhat_max))\n",
     "        print('{} ({})'.format(model, desc_model[model])) \n",
-    "        print('\\n'.join(x for x in mcmcs[model][dataname].__str__().split('\\n') if 'mod_obspos' not in x and 'theta' not in x and 'w_ini' not in x and 'incr' not in x))\n"
+    "        print('\\n'.join(x for x in mcmcs[model][dataname].__str__().split('\\n') if '[' not in x))\n"
    ]
   },
   {
@@ -878,28 +882,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "if 'varnames_save' not in globals():\n",
+    "    varnames_save = None\n",
+    "\n",
     "if savename_output is not None:    \n",
     "    with nc4.Dataset(savename_output, 'w') as nc:\n",
-    "\n",
     "        for dataname in data:\n",
     "            ncg = nc.createGroup(dataname)\n",
     "\n",
-    "            if save_full:\n",
-    "                raise NotImplementedError('Saving is not fully working yet -- I am working on it.')\n",
-    "                \n",
-    "                for i,model in enumerate(mcmcs):\n",
+    "            if save_stan_output:\n",
+    "                dimensions = {\n",
+    "                    'obstime':int(data[dataname]['nt_obs']),\n",
+    "                    'time':int(data[dataname]['nt']),\n",
+    "                    'sizeclass':int(data[dataname]['m']),\n",
+    "                    'm_minus_j_plus_1':int(data[dataname]['m']-data[dataname]['delta_v_inv']),\n",
+    "                }\n",
+    "                dimensions_inv = {v:k for k,v in dimensions.items()}\n",
+    "                for d in dimensions:\n",
+    "                    ncg.createDimension(d, dimensions[d])\n",
     "                    \n",
-    "                    if i == 0:\n",
-    "                        ncg.createDimension('model', len(mcmcs))\n",
-    "                        ncg.createDimension('sample', mcmcs[model][dataname]['divrate'].shape[0])\n",
+    "                ncg.createVariable('time', int, ('time',))\n",
+    "                ncg.variables['time'][:] = int(data[dataname]['dt']) * np.arange(data[dataname]['nt'])\n",
+    "                ncg.variables['time'].units = 'minutes since start of experiment'\n",
+    "                    \n",
+    "                for imodel,model in enumerate(mcmcs):\n",
+    "                    dimensions['sample'] = mcmcs[model][dataname]['mod_obspos'].shape[0]\n",
+    "                    dimensions_inv[dimensions['sample']] = 'sample'\n",
+    "                    \n",
+    "                    ncm = ncg.createGroup(model)\n",
+    "                    ncm.createDimension('sample', dimensions['sample'])\n",
+    "                    \n",
+    "                    # write model description\n",
+    "                    ncm.setncattr('description', desc_model[model])\n",
+    "                    ncm.setncattr('code', stan_files[model_stan_key[model]])\n",
+    "                    \n",
+    "                    varnames = set(v.split('[')[0] for v in mcmcs[model][dataname].flatnames)\n",
+    "                    if varnames_save is None:\n",
+    "                        varnames_curr = varnames\n",
+    "                    else:\n",
+    "                        varnames_curr = varnames_save\n",
     "                        \n",
-    "                    for v in mcmcs[model][dataname].flatnames:\n",
-    "                        if mcmcs[model][dataname][v].ndim == 1:\n",
-    "                            if i == 0:\n",
-    "                                ncg.createVariable(v, float, ('model','sample'))\n",
-    "                            ncg.variables[v][i,:] = mcmcs[model][dataname][v]                        \n",
-    "                \n",
-    "                # TODO implement\n",
+    "                    for v in varnames_curr:\n",
+    "                        if v in varnames:\n",
+    "                            dims = tuple(dimensions_inv[d] for d in mcmcs[model][dataname][v].shape)\n",
+    "                            ncm.createVariable(v, float, dims, zlib=True)\n",
+    "                            ncm.variables[v][:] = mcmcs[model][dataname][v]\n",
+    "                        else:\n",
+    "                            warnings.warn('Cannot find variable \"{}\" for model \"{}\".'.format(v, model))\n",
     "            else:\n",
     "                for i,model in enumerate(mcmcs):\n",
     "                    if i == 0:\n",
