--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -443,7 +443,7 @@
     "        if model in mcmcs:\n",
     "            if dataname in mcmcs[model] and not refit_all and not refit_required[model]:\n",
     "                print('{} ({})'.format(model, desc_model[model])) \n",
-    "                print('\\n'.join(x for x in mcmcs[model][dataname].__str__().split('\\n') if 'mod_obspos' not in x and 'theta' not in x and 'w_ini' not in x and 'incr' not in x))\n",
+    "                print('\\n'.join(x for x in mcmcs[model][dataname].__str__().split('\\n') if '[' not in x))\n",
     "                rhat_max = get_max_rhat(mcmcs[model][dataname])\n",
     "                if try_again and rhat_max >= 1.1:\n",
     "                    print('{}: found Rhat={:.3f}, trying again'.format(model,rhat_max))\n",
