--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -914,11 +914,15 @@
     "                ncg.variables['time'].units = 'minutes since start of experiment'\n",
     "                    \n",
     "                for imodel,model in enumerate(mcmcs):\n",
+    "                    ncm = ncg.createGroup(model)\n",
+    "                    \n",
     "                    dimensions['sample'] = mcmcs[model][dataname]['mod_obspos'].shape[0]\n",
     "                    dimensions_inv[dimensions['sample']] = 'sample'\n",
-    "                    \n",
-    "                    ncm = ncg.createGroup(model)\n",
     "                    ncm.createDimension('sample', dimensions['sample'])\n",
+    "                    if 'tau[1]' in mcmcs[model][dataname].flatnames:\n",
+    "                        dimensions['tau'] = mcmcs[model][dataname]['tau'].shape[1]\n",
+    "                        dimensions_inv[dimensions['tau']] = 'tau'\n",
+    "                        ncm.createDimension('tau', dimensions['tau'])\n",
     "                    \n",
     "                    # write model description\n",
     "                    ncm.setncattr('description', desc_model[model])\n",
