in template: now also save stan data variables

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -912,7 +912,24 @@
     "                ncg.createVariable('time', int, ('time',))\n",
     "                ncg.variables['time'][:] = int(data[dataname]['dt']) * np.arange(data[dataname]['nt'])\n",
     "                ncg.variables['time'].units = 'minutes since start of experiment'\n",
-    "                    \n",
+    "                \n",
+    "                ncg.createVariable('obstime', int, ('obstime',))\n",
+    "                ncg.variables['obstime'][:] = data[dataname]['t_obs'].astype(int)\n",
+    "                ncg.variables['obstime'].units = 'minutes since start of experiment'\n",
+    "                ncg.variables['obstime'].long_name = 'time of observations'\n",
+    "\n",
+    "                for v in ('dt', 'm', 'v_min', 'delta_v_inv', 'obs', 'i_test', 'E', 'obs_count'):\n",
+    "                    if isinstance(data[dataname][v], int):\n",
+    "                        ncg.createVariable(v, int, zlib=True)\n",
+    "                        ncg.variables[v][:] = data[dataname][v]\n",
+    "                    elif isinstance(data[dataname][v], float):\n",
+    "                        ncg.createVariable(v, float, zlib=True)\n",
+    "                        ncg.variables[v][:] = data[dataname][v]\n",
+    "                    else:\n",
+    "                        dims = tuple(dimensions_inv[d] for d in data[dataname][v].shape)\n",
+    "                        ncg.createVariable(v, data[dataname][v].dtype, dims, zlib=True)\n",
+    "                        ncg.variables[v][:] = data[dataname][v]\n",
+    "                \n",
     "                for imodel,model in enumerate(mcmcs):\n",
     "                    ncm = ncg.createGroup(model)\n",
     "                    \n",
