improvements to template

--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -39,7 +39,13 @@
     "\n",
     "# specify the Stan variable names to save; if set to None, all variables are saved \n",
     "# (only active if save_stan_output is True)\n",
-    "varnames_save = None"
+    "varnames_save = None\n",
+    "\n",
+    "# the number of tries to fit each Stan model to achieve an R-hat < 1.1\n",
+    "num_tries = 3\n",
+    "\n",
+    "# the prior_only option passed to each Stan model\n",
+    "prior_only = False"
    ]
   },
   {
@@ -232,7 +238,7 @@
     "        data[dataname]['i_test'] = np.zeros(data[dataname]['nt_obs'], dtype=int)\n",
     "        \n",
     "    # switch on or off data fitting\n",
-    "    data[dataname]['prior_only'] = 0\n",
+    "    data[dataname]['prior_only'] = int(prior_only)\n",
     "    \n",
     "    # add light data\n",
     "    t = np.arange(data[dataname]['nt'])*data[dataname]['dt']\n",
@@ -391,6 +397,8 @@
     "    maxrhats = {}\n",
     "if 'sampling_time' not in globals():\n",
     "    sampling_time = {}\n",
+    "if 'num_tries' not in globals():\n",
+    "    num_tries = 3\n",
     "    \n",
     "try_again = True\n",
     "refit_all = False\n",
@@ -457,7 +465,7 @@
     "                print('{}: change in model code requires re-running model'.format(model))\n",
     "        else:\n",
     "            mcmcs[model] = {}\n",
-    "        for itry in range(3):\n",
+    "        for itry in range(num_tries):\n",
     "            t0 = time.time()\n",
     "            mcmcs[model][dataname] = models[model].sampling(data=data[dataname], iter=2000)\n",
     "            sampling_time[model][dataname].append(time.time() - t0) # in seconds\n",
@@ -466,7 +474,7 @@
     "            maxrhats[model][dataname].append(rhat_max)\n",
     "            if rhat_max < 1.1:\n",
     "                break\n",
-    "            print('{}: in try {}/3 found Rhat={:.3f}, trying again'.format(model,itry+1,rhat_max))\n",
+    "            print('{}: in try {}/{} found Rhat={:.3f}, trying again'.format(model, itry+1, num_tries, rhat_max))\n",
     "        print('{} ({})'.format(model, desc_model[model])) \n",
     "        print('\\n'.join(x for x in mcmcs[model][dataname].__str__().split('\\n') if '[' not in x))\n",
     "        print()"
@@ -527,7 +535,7 @@
     "        ylim_top = max(ylim_top, len(maxrhats[model][dataname]))\n",
     "ylim_top += 1\n",
     "\n",
-    "fig, axs = plt.subplots(nrows=len(data), figsize=(max(24,len(mcmcs)*4.5),len(data)*9), sharex=True, sharey=True)\n",
+    "fig, axs = plt.subplots(nrows=len(data), figsize=(max(24,len(mcmcs)*4.5),len(data)*9), squeeze=False, sharex=True, sharey=True)\n",
     "for ax,dataname in zip(axs.flat,data):\n",
     "    xticks = []\n",
     "    xticklabels = []\n",
@@ -1017,7 +1025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
