--- a/experimental/mitosis/exp_zs_20200729_mit_prior_stage3.ipynb
+++ b/experimental/mitosis/exp_zs_20200729_mit_prior_stage3.ipynb
@@ -4,8 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# template notebook to be expanded\n",
-    " * add description here\n",
+    "# stage 3 of initial mitosis experiments\n",
+    " * only using versions of `m5`\n",
+    " * no data fitting\n",
+    " * strong priors, including for `delta_incr`\n",
+    " * no estimation of initial conditions\n",
     " \n",
     "### general information about the different growth/respiration versions\n",
     "\n",
