--- a/experimental/exp_zs_paulstemplate.ipynb
+++ b/experimental/exp_zs_paulstemplate.ipynb
@@ -897,9 +897,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import warnings\n",
+    "import logging\n",
     "if 'varnames_save' not in globals():\n",
     "    varnames_save = None\n",
+    "\n",
+    "save_only_converged = True\n",
     "\n",
     "if savename_output is not None:    \n",
     "    with nc4.Dataset(savename_output, 'w') as nc:\n",
@@ -939,6 +941,9 @@
     "                        ncg.variables[v][:] = data[dataname][v]\n",
     "                \n",
     "                for imodel,model in enumerate(mcmcs):\n",
+    "                    if save_only_converged and get_max_rhat(mcmcs[model][dataname]) > 1.1:\n",
+    "                        logging.warning('Model \"{}\" did not converge -- skipping.'.format(name))\n",
+    "                        continue\n",
     "                    ncm = ncg.createGroup(model)\n",
     "                    \n",
     "                    dimensions['sample'] = mcmcs[model][dataname]['mod_obspos'].shape[0]\n",
@@ -965,7 +970,7 @@
     "                            ncm.createVariable(v, float, dims, zlib=True)\n",
     "                            ncm.variables[v][:] = mcmcs[model][dataname][v]\n",
     "                        else:\n",
-    "                            warnings.warn('Cannot find variable \"{}\" for model \"{}\".'.format(v, model))\n",
+    "                            logging.warning('Cannot find variable \"{}\" for model \"{}\".'.format(v, model))\n",
     "            else:\n",
     "                for i,model in enumerate(mcmcs):\n",
     "                    if i == 0:\n",
