small mitosis update

--- a/experimental/exp_zs_20200723_mitosis.ipynb
+++ b/experimental/exp_zs_20200723_mitosis.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +314,7 @@
     "    #'m12':'m5-m7 hybrid',\n",
     "    #'m13':'m5-m8 hybrid',\n",
     "    #'m14':'m5-m9 hybrid',\n",
-    "    #'m5mv1':'m5 + mitosis (V1)',\n",
+    "    'm5mv1':'m5 + mitosis (V1)',\n",
     "    'm5mv2':'m5 + mitosis (V2)',\n",
     "}\n",
     "# preparing for some regular expression magic\n",
@@ -380,22 +380,7 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:pystan:COMPILING THE C++ CODE FOR MODEL m5mv2 NOW.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "m5mv2: compiling\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pystan\n",
     "import re\n",
